test/trivial/bradc/initvarsamename.good
Error: Variable 'x' used before defined (initvarsamename.chpl:4)
